@@ -25,7 +25,7 @@ var main = function() {
 
 var makeSampleScript = function() {
 	var mgl = "origintick off\n";
-	mgl += "ranges -2 2 -2 2 -2 2:"   // NOTE: Ranges MUST BE specified for correctly work of zoomaxis feature
+	mgl += "title 'qqq':ranges -2 2 -2 2 -2 2:"   // NOTE: Ranges MUST BE specified for correctly work of zoomaxis feature
 	mgl += "facenum 50:";
 	mgl += "origin 0 0 0:axis :xlabel 'x':ylabel 'y':zlabel 'z':"
 	mgl += "box:fplot 'sin(x^2)'\n";   // This is just for testing zoomaxis features
