@@ -23,8 +23,9 @@
 13. Clf in GLUT
 14. Add Qt5 support
 15. "Unrotatable" points
-16. Inplot data should have ranges + calc coor + JS
+16. Inplot data should have ranges (add mglInPlot{x1,x2,y1,y2,Bp or something like this} which include mglMatrix instead of mglBase::Bp) + calc coor + JS
 16. frames in JS ?!?
+17. 'perspective' command
 
 
 
